sjengida/c3/std_eval
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/std_eval/src/neval.c:1025:11: error: use of undeclared identifier 'xmmword_41C590'
v146[0] = xmmword_41C590; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/std_eval/src/neval.c:1026:11: error: use of undeclared identifier 'xmmword_41C5A0'
v142[0] = xmmword_41C5A0; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/std_eval/src/neval.c:1027:11: error: use of undeclared identifier 'xmmword_41C590'
v146[1] = xmmword_41C590; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/std_eval/src/neval.c:1028:11: error: use of undeclared identifier 'xmmword_41C5A0'
v142[1] = xmmword_41C5A0; 
          ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/std_eval/src/obj/neval.o] Error 1
